# automake_demo

./: Makefile  Makefile.am  configure.ac  run.sh
src/: Makefile  Makefile.am  test.cpp
src/dohaha/: Makefile  Makefile.am  haha.cpp  haha.h
src/dohello/: Makefile  Makefile.am  dohello.cpp  dohello.h
src/easylogger/: Makefile  Makefile.am
